--- a/signin-style.css
+++ b/signin-style.css
@@ -128,3 +128,15 @@ input[type="submit"]:focus{
   border: none;
   border-radius: 5px;
 }
+
+.header2 {
+  width: 30%;
+  margin: 50px auto 0px;
+  color: white;
+  background: #5F9EA0;
+  text-align: center;
+  border: 1px solid #B0C4DE;
+  border-bottom: none;
+  border-radius: 10px 10px 0px 0px;
+  padding: 20px;
+}
